[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/angelica/Themes/Hint.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/angelica/DJ/DJ.gd" type="Script" id=2]
[ext_resource path="res://addons/angelica/DJ/Music.gd" type="Script" id=3]
[ext_resource path="res://addons/angelica/DJ/DJmono.tres" type="DynamicFont" id=4]
[ext_resource path="res://addons/angelica/DJ/Sounds.gd" type="Script" id=5]
[ext_resource path="res://addons/angelica/Themes/SuperButton.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.0352941, 0.172549, 0.207843, 0.678431 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0, 0.0705882, 0.0980392, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 6.0
content_margin_right = 6.0
bg_color = Color( 0.152941, 0.152941, 0.152941, 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://addons/angelica/fonts/OpenSans-Light.ttf"

[sub_resource type="DynamicFont" id=4]
size = 17
outline_size = 1
outline_color = Color( 0, 0.458824, 0.733333, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://addons/angelica/fonts/OpenSans-Semibold.ttf"

[sub_resource type="DynamicFont" id=6]
font_data = SubResource( 5 )

[node name="DJ" type="Node2D"]
position = Vector2( 1.12245, 1.83627 )
script = ExtResource( 2 )

[node name="Music" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Sounds" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="."]
margin_right = 620.0
margin_bottom = 44.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Loop" type="LineEdit" parent="."]
margin_left = 492.0
margin_top = 11.0
margin_right = 601.0
margin_bottom = 35.0
hint_tooltip = "Selected tracks"
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.443137, 0.839216, 0.960784, 1 )
text = "0123456789"
max_length = 10
clear_button_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicName" type="LineEdit" parent="."]
margin_left = 145.0
margin_top = 11.0
margin_right = 253.0
margin_bottom = 35.0
hint_tooltip = "Music Name"
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.443137, 0.839216, 0.960784, 1 )
text = "New track"
max_length = 10
clear_button_enabled = true
placeholder_text = "Music name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="RichTextLabel" parent="."]
modulate = Color( 1, 0, 0.683333, 1 )
margin_left = 264.0
margin_top = 6.0
margin_right = 507.0
margin_bottom = 47.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[url=add music][img]res://img/32/23ec.png[/img][/url] [url=save music][img]res://img/32/23eb.png[/img][/url] [url=clear all][img]res://img/16/1f5d9.png[/img][/url] [url=rewind][img]res://img/32/23ee.png[/img][/url] [url=loop all][img]res://img/32/1f504.png[/img][/url] [url=play][img]res://img/32/25b6.png[/img][/url]
"
text = "     
"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="."]
modulate = Color( 0.35, 2.67, 2.67, 1 )
margin_left = 123.0
margin_top = 10.0561
margin_right = 144.0
margin_bottom = 36.0561
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[url=list music][img]res://img/16/1f3b5.png[/img][/url]"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hint" parent="." instance=ExtResource( 1 )]
visible = false

[node name="SpeedTune" type="SpinBox" parent="."]
modulate = Color( 0.49, 1.17, 1.16, 1 )
margin_left = 46.6574
margin_top = 9.8909
margin_right = 120.658
margin_bottom = 33.8909
hint_tooltip = "BPM (Beats Per Minute)"
max_value = 900.0
value = 130.0
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SavePopUp" type="Panel" parent="."]
visible = false
margin_left = 131.25
margin_top = 3.67864
margin_right = 408.25
margin_bottom = 56.6786
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="SavePopUp"]
modulate = Color( 1, 0, 0.683333, 1 )
margin_left = 19.0103
margin_top = 16.4949
margin_right = 343.01
margin_bottom = 65.4949
custom_fonts/normal_font = SubResource( 6 )
bbcode_enabled = true
bbcode_text = "[url=cancel]Please, change music name [img]res://img/16/1f5d9.png[/img][/url]   "
meta_underlined = false
text = "Please, change music name    "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SuperButton" parent="." instance=ExtResource( 6 )]
position = Vector2( 1.88107, -0.356781 )

[connection signal="text_changed" from="Loop" to="." method="_on_Loop_text_changed"]
[connection signal="text_entered" from="Loop" to="." method="_on_Loop_text_entered"]
[connection signal="gui_input" from="MusicName" to="." method="_on_MusicName_gui_input"]
[connection signal="text_changed" from="MusicName" to="." method="_on_Loop_text_changed"]
[connection signal="text_entered" from="MusicName" to="." method="_on_Loop_text_entered"]
[connection signal="meta_clicked" from="Menu" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="meta_hover_ended" from="Menu" to="." method="_on_RichTextLabel_meta_hover_ended"]
[connection signal="meta_hover_started" from="Menu" to="." method="_on_RichTextLabel_meta_hover_started"]
[connection signal="meta_clicked" from="RichTextLabel4" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="meta_hover_ended" from="RichTextLabel4" to="." method="_on_RichTextLabel4_meta_hover_ended"]
[connection signal="meta_hover_started" from="RichTextLabel4" to="." method="_on_RichTextLabel4_meta_hover_started"]
[connection signal="meta_clicked" from="SavePopUp/RichTextLabel2" to="." method="_on_RichTextLabel_meta_clicked"]
[connection signal="meta_hover_ended" from="SavePopUp/RichTextLabel2" to="." method="_on_RichTextLabel_meta_hover_ended"]
[connection signal="meta_hover_started" from="SavePopUp/RichTextLabel2" to="." method="_on_RichTextLabel_meta_hover_started"]
